Added General Puzzle Utilities
- Added switches that can activate any other object(s)
- Added keys that can unlock doors

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,15 +3,19 @@ GameName=GameJame2026
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThiefStealthGame/Levels/Level1.Level1
-GameDefaultMap=/Game/ThiefStealthGame/Levels/Level1.Level1
-TransitionMap=
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThiefStealthGame/Mechanics/Character/GM_StealthGame.GM_StealthGame_C
-GlobalDefaultServerGameMode=None
+FourPlayerSplitscreenLayout=Grid
+bShowAllPlayerWidgetsWhenSplitscreenDisabled=False
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/ThiefStealthGame/Mechanics/Character/GI_StealthGame.GI_StealthGame_C
+GameDefaultMap=/Game/ThiefStealthGame/Levels/Level1.Level1
 ServerDefaultMap=None
+GlobalDefaultGameMode=/Game/ThiefStealthGame/Mechanics/Character/Global/GM_StealthGame.GM_StealthGame_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
