Guard doesnt work I guess idk

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -160,3 +160,9 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=Multiply
+
+[/Script/AIModule.AISystem]
+bEnableDebuggerPlugin=True
+
